# litellm-observatory

./: .cursorrules  ARCHITECTURE.md  README.md  main.py  problem_tracker.md  pyproject.toml
docs/: ADDING_TEST_SUITES.md  API_REFERENCE.md  ENVIRONMENT_VARIABLES.md  QUEUE_SYSTEM.md  TEST_COVERAGE.md
litellm_observatory/: __init__.py  auth.py  models.py  queue.py  server.py
litellm_observatory/integrations/: __init__.py  slack.py
litellm_observatory/test_suites/: __init__.py  base.py  test_access_group_perf.py  test_mock.py  test_mock_single_request.py  test_oai_azure_release.py
tests/: test_documentation_coverage.py  test_environment_variables_coverage.py  test_queue.py  test_server_slack_integration.py
