[tool.poetry]
name = "litellm-observatory"
version = "0.1.0"
description = "End-to-end testing suite for LiteLLM deployments - provider tests, performance metrics, and API validation"
authors = ["Alexsander <alexsander@berri.ai>"]
readme = "README.md"
license = "LICENSE"
packages = [{include = "litellm_observatory"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
